Search API Solr Search 1.x, dev (xxxx-xx-xx):
---------------------------------------------
- #2611716 by aditya_anurag, drunken monkey: Improved the method documentation
  comments.
- #2599658 by Loparev, drunken monkey: Added the possibility to highlight
  non-fulltext fields.
- #2598288 by ethan.han777, JeroenT, drunken monkey: Fixed potential notices in
  the spellchecker code.
- #2564927 by thePanz: Added support for random sorting in grouped searches.
- #2527528 by maximpodorov, drunken monkey: Fixed searching of string fields
  with leading/trailing spaces.
- #2513314 by fortis, drunken monkey: Fixed error for empty filters.
- #2551763 by drunken monkey: Fixed mention of INSTALL.txt in an error message.

Search API Solr Search 1.9 (2015-08-30):
----------------------------------------
- #2503829 by das-peter: Added support for grouping on "magic" fields.
- #2503617 by tobiasb: Fixed undefined "status_message" property in HTTP
  response object.
- #2313591 by thePanz, nadavoid: Added support for random sorting.
- #2004596 by drunken monkey: Fixed workarounds for MLT problems.
- #2486533 by drunken monkey: Fixed the default operator in the Solr 5 configs.
- #2466897 by drunken monkey: Fixed Solr version options in server settings.
- #1918904 by arnested, ramlev, drunken monkey: Added an alter hook for
  autocomplete suggestions.
- #2532812 by drunken monkey: Improved performance for filter-only queries.
- #2463523 by bmunslow: Fixed field boosts in multi-index searches.

Search API Solr Search 1.8 (2015-06-15):
----------------------------------------
- #2502511 by drunken monkey: Fixed index removal on Solr 5.
- #2441117 by drunken monkey: Fixed unnecessary reindexing after changing
  fields' boosts.

Search API Solr Search 1.7 (2015-06-08):
----------------------------------------
- #2466489 by drunken monkey: Changed installation instructions to point to the
  handbook.
- #2486533 by drunken monkey: Fixed default operator in Solr 5.