@@ -1039,6 +1039,13 @@
     -->
   <!--<requestHandler name="/update" class="solr.UpdateRequestHandler">
   </requestHandler>-->
+
+  <initParams path="/update/**">
+    <lst name="defaults">
+      <str name="update.chain">autocomplete_truncate</str>
+    </lst>
+  </initParams>
+
   <initParams path="/update/**,/query,/select,/tvrh,/elevate,/spell,/browse">
     <lst name="defaults">
       <str name="df">text</str>
@@ -1706,6 +1713,21 @@
        <processor class="solr.RunUpdateProcessorFactory" />
      </updateRequestProcessorChain>
     -->
+
+  <!-- Autocomplete fields truncation
+      Truncate autocomplete suggester fields to the maximum length of
+      32766 since Solr might otherwise throw an "immense terms"
+      exception:
+      http://developmentsitecore.blogspot.se/2015/08/resolved-solr-exceptions-document.html
+    -->
+     <updateRequestProcessorChain name="autocomplete_truncate">
+       <processor class="solr.TruncateFieldUpdateProcessorFactory">
+         <str name="fieldRegex">^(?:ss)|(?:sm)_autocomplete_.*</str>
+         <int name="maxLength">32766</int>
+       </processor>
+       <processor class="solr.LogUpdateProcessorFactory" />
+       <processor class="solr.RunUpdateProcessorFactory" />
+     </updateRequestProcessorChain>
 
   <!-- Response Writers
 
